Pranjal | Removes setUp method and inline initialization for better readability